--- a/2.html
+++ b/2.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-  <title>web1 - html</title>
-  <meta charset="utf8">
+  <title>web1 - css</title>
 </head>
+
 <body>
   <h1><a href="index.html">web</a></h1>
   <ol>
@@ -11,4 +11,9 @@
     <li><a href="2.html">css</a></li>
     <li><a href="3.html">javascript</a></li>
   </ol>
-<h2>css이란 무엇인가?</h2>
+  <h2>css</h2>
+  <p><a href="https://html.spec.whatwg.org/multipage/" target ="blank" title="html specification">[OSEN=김보라 기자]</a> 영화 '아이리시맨'이 미국의 근현대사를 담고 있는 명작으로 입소문을 얻고 있다.
+  '아이리시맨'<strong>(감독 마틴 스코세이지, 제공 넷플릭스)</strong>은 20세기 미국 정치 이면에 존재했던 악명높은 인물들과 연루된 한 남자의 시선으로 장기 미제 사건의 대명사 <u>‘지미 호파 실종 사건’</u>을 그려낸 넷플릭스 영화다.</p><img src="aa.jpg" width="450"><p style="margin-top:45px;">마틴 스코세이지 감독과 로버트 드 니로, 알 파치노, 조 페시 등 영화계 거장 배우들이 시간을 뛰어넘는 이야기를 그려 주목받고 있다.
+  '아이리시맨'은 1950년대부터 2000년대까지 존 F. 케네디의 미 대통령 당선과 암살, 워터게이트, 지미 호파 실종 등 미국 근현대사의 주요 사건들이 담겨 있다. 전쟁 후 미국의 어두운 정치사에서 비롯되었지만 결국 세계를 뒤흔들었던 사건들이 세 남자의 인생과 얽히며 방대하게 이어진다. 많은 것을 담고 있는 이야기를 위해 제작진은 초기부터 많은 준비를 해야만 했다.</p>
+</body>
+</html>
