--- a/1.html
+++ b/1.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>web1 - html</title>
-  <meta charset="utf8">
 </head>
+
 <body>
   <h1><a href="index.html">web</a></h1>
   <ol>
@@ -11,13 +11,9 @@
     <li><a href="2.html">css</a></li>
     <li><a href="3.html">javascript</a></li>
   </ol>
-<h2>html이란 무엇인가?</h2>
-<p><a href="https://html.spec.whatwg.org/multipage/" target ="blank" title ="html5 specification">아이리시맨'은 스코세이지 감독이 지금까지 만든 작품</a> 가운데 가장 많은 제작비(1억7500만달러)를 들인 작품이다. 찰스 브랜트가 2004년 발표한 소설 '듣자하니 자네가 페인트칠을 한다던데(I Heard You Paint Houses)'를 원작으로 1975년 의문의 죽음을 당한 전미트럭 운송노조위원장 지미 호퍼 살해사건과 이에 얽힌 히트맨(암살자) 프랭크 시런의 이야기를 그렸다. 이 사건은 미국내 장기미제사건 중
-하나로 <strong>스코세이지 감독은 지난 <u>2008년</u>부터 작품을 준비했다.</strong></p>
-<img src="ss.jpg" width="450">
-<p>넷플릭스에 대해 공공연히 반대의 입장을 나타내는 스티븐 스필버그와 달리 스코세이지는 넷플릭스와는 밀월관계다. 그는 "스트리밍 서비스는 혁명과도 같다"면서 "간섭을 받지 않고 원하는대로 그림을 그릴 수 있게 후원을 받는다면 우리에게는 기회가 될 것"이라고 스트리밍 서비스에 대해 호감을 표했다.
-
-스코세이지 감독의 페르소나 로버트 드 니로와 '좋은 친구들'의 조 페시, 이번에 처음 작업에 참여하는 알 파치노, 스코세이지 뉴욕 영화학교 졸업작품 '누가 나의 문을 두드리는가'에 참여했던 50년지기 하비 케이틀 등 관록의 명배우들이 명연기를 펼쳤다. 각본은 '갱스 오브 뉴욕', '쉰들러 리스트'의 각본가 스티븐 자일리안이 맡았다.</p>
-
-출처 : 오피니언뉴스(http://www.opinionnews.co.kr)
+  <h2>htmld</h2>
+  <p><a href="https://html.spec.whatwg.org/multipage/" target ="blank" title="html specification">[OSEN=김보라 기자]</a> 영화 '아이리시맨'이 미국의 근현대사를 담고 있는 명작으로 입소문을 얻고 있다.
+  '아이리시맨'<strong>(감독 마틴 스코세이지, 제공 넷플릭스)</strong>은 20세기 미국 정치 이면에 존재했던 악명높은 인물들과 연루된 한 남자의 시선으로 장기 미제 사건의 대명사 <u>‘지미 호파 실종 사건’</u>을 그려낸 넷플릭스 영화다.</p><img src="aa.jpg" width="450"><p style="margin-top:45px;">마틴 스코세이지 감독과 로버트 드 니로, 알 파치노, 조 페시 등 영화계 거장 배우들이 시간을 뛰어넘는 이야기를 그려 주목받고 있다.
+  '아이리시맨'은 1950년대부터 2000년대까지 존 F. 케네디의 미 대통령 당선과 암살, 워터게이트, 지미 호파 실종 등 미국 근현대사의 주요 사건들이 담겨 있다. 전쟁 후 미국의 어두운 정치사에서 비롯되었지만 결국 세계를 뒤흔들었던 사건들이 세 남자의 인생과 얽히며 방대하게 이어진다. 많은 것을 담고 있는 이야기를 위해 제작진은 초기부터 많은 준비를 해야만 했다.</p>
 </body>
+</html>
